--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Iam Muhammed Farish</div>
-                    <p>born and raised in calicut,india.Currently iam a final year computer science student.I have some passion on IT field ,becouse of that i have some skills at IT.Iam skilled at web devlopment and penitration testing .Moreover i have a tech youtube channel named as "Cyber 90" through that i will share my own ideas and classes about tech.</p>
+                    <p>born and raised in calicut,india.Currently iam a final year computer science student.Iam skilled at web devlopment and penitration testing .Moreover i have a tech youtube channel named as "Cyber 90" through that i will share my own ideas and classes about tech.</p>
                  
                 </div>
             </div>
